force-app/main/default/objects/InterviewEventQuestionaireTemplate__c/fields/QuestionaireTemplate__c.field-meta.xml
<CustomField>
    <fullName>QuestionaireTemplate__c</fullName>
    <label>QuestionaireTemplate</label>
    <referenceTo>QuestionaireTemplate__c</referenceTo>
    <relationshipLabel>Interview Events</relationshipLabel>
    <relationshipName>InterviewEvents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>