force-app/main/default/objects/InterviewEventQuestionaireTemplate__c/fields/Schedule_Gap__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Gap__c</fullName>
    <label>Schedule Gap</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>